<resources>
    <string name="app_name">Online Exams</string>
    <string name="login"> Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="createnewaccount">Create new account</string>
    <string name="create">Create new account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_hava_an_account_login">Already hava an account? Login</string>
    <string name="welcome">Welcome!</string>
    <string name="start_quiz">Start quiz</string>
    <string name="quiz_id">Quiz ID</string>
</resources>