<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    tools:context=".Home">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">

        <ImageView
            android:id="@+id/signout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/signout" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/signout"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:padding="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/grey_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/start_quiz"
                        android:textColor="@color/main"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/startQuiz"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/button_background"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="start"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/start_quiz_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_toLeftOf="@+id/startQuiz"
                            android:background="@drawable/white_edittext"
                            android:hint="@string/quiz_id"
                            android:imeOptions="actionDone"
                            android:inputType="numberSigned"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </RelativeLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/solvedQuizzes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/grey_background"
                    android:gravity="center"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/arrow" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="Your Solved Quizzes"
                        android:textColor="@color/main"
                        android:textSize="22dp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/grey_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="Total Question"
                        android:textColor="@color/main"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_question"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="000"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/grey_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="Total Points"
                        android:textColor="@color/main"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="000"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginBottom="20dp"
                    android:background="@drawable/grey_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="Create_quiz"
                        android:textColor="@color/main"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/createQuiz"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/button_background"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="create"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/quiz_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_toLeftOf="@+id/createQuiz"
                            android:background="@drawable/white_edittext"
                            android:hint="Quiz Title"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </RelativeLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/your_quizzes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_background"
                    android:gravity="center"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/arrow" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="Your Quizzes"
                        android:textColor="@color/main"
                        android:textSize="22dp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>